<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/note_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="20dp"
    >


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/light_brown"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            >

            <TextView
                android:id="@+id/note_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/note"
                android:maxLines="1"
                android:ellipsize="middle"
                android:textColor="@color/cream"
                />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50dp"
                android:layout_marginVertical="7dp"
                android:backgroundTint="@color/dark_grey"
                />

            <TextView
                android:id="@+id/note_card_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/cream"
                />

            <TextView
                android:id="@+id/note_card_lastmod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:maxLines="1"
                android:text="@string/last_modified"
                android:layout_marginTop="5dp"
                />




        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>